--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "@types/hast": "^3.0.4",
     "classnames": "^2.3.1",
     "date-fns": "^2.28.0",
     "dotenv": "^16.0.3",
@@ -17,7 +18,7 @@
     "fs-extra": "^11.1.0",
     "gray-matter": "^4.0.3",
     "hast-util-from-html": "^1.0.0",
-    "hast-util-select": "^5.0.2",
+    "hast-util-select": "^6.0.2",
     "next": "latest",
     "next-seo": "^5.15.0",
     "react": "^18.2.0",
